<resources>
    <string name="app_name">TaskApp</string>
    <string name="phone_number">Phone</string>
    <string name="email">Email Address</string>
    <string name="log_in">Log In</string>
    <string name="dummy_image">Dummy Image</string>
    <string name="name">Name</string>
    <string name="e_mail">Email</string>
    <string name="auto_login">Auto Login</string>
    <string name="didnt_text">"Didn't have a account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="remember">Remember Me</string>
    <string name="bottom">Bottom Sheet</string>
    <string name="example_bottom_sheet" >This is an example bottom sheet behaviour</string>
    <string name="share">Share</string>
    <string name="selected">Selected</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="webview">Webview</string>
    <string name="youtube_player">Youtube</string>
    <string name="url">Enter Website Address</string>
    <string name="search">Search</string>
    <string name="contacts">Contacts</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_image">Contact Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="biometric_title">Biometric Login for app</string>
    <string name="biometric_sub_title">Log in using your biometric credential</string>
    <string name="biometric_button">Use account password</string>
    <string name="values_to_save">Enter values to save</string>
    <string name="save">Save</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="decrypt">Decrypt File</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="speak">Speak</string>
    <string name="delete">Delete</string>
    <string name="call">Call</string>
    <string name="login_symbol"><![CDATA[>]]></string>
    <string name="helper_text">Helper Text</string>
    <string name="youtube_video_title">Video Title</string>
    <string name="exchange">Exchange</string>
    <string name="encrypt">Encrypt File</string>
    <string name="inr">INR</string>
    <string name="insta">Instagram Story</string>
    <string name="next">Next</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="please_email">Please enter valid email address</string>
    <string name="please_phone">Please enter valid phone number</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
</resources>